--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>TRACKULA.OGR</title>
+    <title>TRACKULA.ORG</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 
   <body id="page-top">
 
-      <a href="#" id="download-btn"><img src="img/seta.png" /></a>
+      <a href="#" id="download-btn" class="btn-primary btn-lg">Descarga el plugin</a>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
