--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <header class="masthead">
       <div class="intro-body">
                 <video poster="img/intro-bg.jpg" autoplay loop>
-                    <source src="vids/Banner_V7.mp4" type="video/mp4">
-                    <source src="vids/Banner_V7.ogv" type="video/ogv">
-                    <source src="vids/Banner_V7.webm" type="video/webm">
+                    <source src="vids/trackula.mp4" type="video/mp4">
+                    <!-- <source src="vids/trackula.ogv" type="video/ogv"> -->
+                    <source src="vids/trackula.webm" type="video/webm">
                 </video>
               <h1 class="brand-heading">TRACKULA</h1>
       </div>
