Add OGV file to index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="intro-body">
                 <video poster="img/intro-bg.jpg" autoplay loop>
                     <source src="vids/trackula.mp4" type="video/mp4">
-                    <!-- <source src="vids/trackula.ogv" type="video/ogv"> -->
+                    <source src="vids/trackula.ogv" type="video/ogv">
                     <source src="vids/trackula.webm" type="video/webm">
                 </video>
               <h1 class="brand-heading">TRACKULA</h1>
