Rework cookie policy

--- a/index.html
+++ b/index.html
@@ -167,7 +167,13 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>Política de cookies</h2>
-            <p>Tráckula, incluyendo todos sus servicios, respeta la privacidad de sus usuarios, especialmente en esta página. No recopilamos ninguna información de usuario, como una dirección IP, dirección de correo electrónico y / u otra información acerca de los visitantes de la página. Tráckula no utiliza cookies.</p>
+            <p>Trackula no solo respeta la privacidad de sus usuarios,
+            sino que le plantea al usuario este problema. Para ello,
+            esta web no recopila ningún dato persnalmente
+            identificativo, y el plugin asociado solamente almacena
+            localmente los datos de navegación, nunca
+            transmitiéndolos. Esta página no carga recursos de
+            terceras partes.</p>
             
           </div>
         </div>
