Recommend uBlock Origin
uBlock is unrelated to the uBlock Origin project and not really the
guys worth following

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <h5>
                         <img src="img/ublock.svg" alt="uBlock" class="tool-icon" />
                         <br/>
-                        <a href="https://www.ublock.org/" target="_blank">uBlock</a>
+                        <a href="https://github.com/gorhill/uBlock#installation" target="_blank">uBlock Origin</a>
                     </h5>
                     <p>Controla el navegador para bloquear cualquier tipo de envío de información automática y bloquear elementos intrusivos.</p>
                 </div>
