Make a few aesthetic changes in the tools section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2>Herramientas</h2>
-            <div class="row">
+            <div class="row anti-tracking-tools">
                 <div class="col-sm-4">
                     <h5>
                         <img src="img/light.png" alt="LightBeam" class="tool-icon" />
