--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h2>Política de cookies</h2>
             <p>Trackula no solo respeta la privacidad de sus usuarios,
             sino que le plantea al usuario este problema. Para ello,
-            esta web no recopila ningún dato persnalmente
+            esta web no recopila ningún dato personalmente
             identificativo, y el plugin asociado solamente almacena
             localmente los datos de navegación, nunca
             transmitiéndolos. Esta página no carga recursos de
