--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Trackula es un proyecto que pretende concienciar a la ciudadanía de cómo tus datos fluyen por la red y cómo algunas empresas se lucran de ello. Además de consejos de cómo evitar que esto ocurra, te proporcionamos un plugin para que lo veas con tus propios ojos.">
+    <meta name="keywords" content="privacidad, privacy, seguridad, security, personal data, mydata, cookies, lightbeam">
+    <meta name="author" content="TRACKULA">
 
     <title>Trackula</title>
 
