Add legal disclaimer (pending style review)

--- a/index.html
+++ b/index.html
@@ -181,6 +181,26 @@
         </div>
     </section>
       
+    <!-- Legal Section -->
+    <section id="legal_disclaimer" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Aviso legal</h2>
+	    <p>
+	    Trackula.org es uno de los ocho proyectos de desarrollo colaborativo seleccionados para su producción en el taller internacional de visualización de datos Visualizar'17: Migraciones, proyectos seleccionados, celebrado en Medialab-Prado, entre el 15 y 30 de septiembre.
+	    </p>
+	    <p>
+	    Medialab-Prado, situado en la Antigua Serrería Belga de Madrid, en la Plaza de las Letras, C/ Alameda, 15, C.P. 28014, es un laboratorio ciudadano de producción e investigación que explora las formas de experimentación y aprendizaje colaborativo surgidas de las redes digitales y acoge, a propuesta de la ciudadanía, proyectos y actividades directamente relacionados con las líneas que se desarrollen en cada momento en el centro, de titularidad del Ayuntamiento de Madrid y gestionado por la empresa municipal MADRID DESTINO CULTURA TURISMO Y NEGOCIO, S.A. con CIF número A-84073105 y domicilio social en Madrid, Calle Conde Duque, 9-11, 2ª planta, 28015 Madrid
+	    </p>
+	    <p>
+MADRID DESTINO únicamente promueve y acoge el proyecto desarrollado por el grupo de trabajo que participó en el taller sin acceder a su gestión ni recopilar datos de carácter personal de usuarios. Las personas interesadas podrán ponerse en contacto con el grupo de trabajo Trackula.org a través de la plataforma GitHub, como usuarios registrados de la misma, y siendo de aplicación la política de privacidad de dicha plataforma, disponible en https://help.github.com/articles/github-privacy-statement/
+	    </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="content-section text-center">
       <div class="container">
