Reflect that now the host site is Netlify

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 	      dominio.
 	    </p><p>
 	      El servidor que está poniendo esta página a disposición
-	      de Internet es, actualmente, GitHub Pages, con lo que
-	      GitHub Inc. podría estar registrando los accesos a esta
+	      de Internet es, actualmente, Netlify, con lo que
+	      Netlify. podría estar registrando los accesos a esta
 	      página, incluyendo la dirección IP del usuario, y
 	      aquellos datos que su navegador proporcione, como la
 	      información sobre el agente de usuario, idiomas
@@ -211,11 +211,12 @@
 	      de acceso a Internet en el centro de datos desde el que
 	      se esté sirviendo esto y que es potestad de GitHub.
 	    </p><p>
-	      GitHub y CloudFlare ofrecen estos servicios de forma
+	      Netlify y CloudFlare ofrecen estos servicios de forma
 	      gratuita y automática, y Trackula no recibe ningún tipo
 	      de información ni contraprestación, ni tiene vigente
-	      ningún trato con GitHub diferente a lo disponible
-	      libremente en sus respectivas páginas web.
+	      ningún trato con Netlify, CloudFlare o GitHub diferente
+	      a lo disponible libremente en sus respectivas páginas
+	      web.
 	    </p>
 	  </div>
 	</div>
